fix gradient/host photos/slider/tags/rating/collapse

--- a/src/css/collapse.css
+++ b/src/css/collapse.css
@@ -83,3 +83,14 @@
     }
   }
   
+  ul,
+  li {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+  }
+
+  ul {
+    display: flex;
+    flex-direction: column;
+}
