--- a/src/css/header.css
+++ b/src/css/header.css
@@ -28,6 +28,7 @@
   list-style-type: none;
   padding: 0;
   margin: 0;
+  display: inline-block;
 }
 
 .nav ul li {
@@ -37,7 +38,7 @@
 .nav ul li a {
   width: 136px;
   height: 34px;
-  font-family: 'Montserrat';
+  font-family: Montserrat;
   font-style: normal;
   font-weight: 500;
   font-size: 24px;
