--- a/src/css/logements-card.css
+++ b/src/css/logements-card.css
@@ -5,8 +5,9 @@
   width: 100%;
   max-width: 340px;
   border-radius: 10px;
-  overflow: hidden;
   min-width: 340px;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(10, 10, 10, 0) 42%, rgba(4, 4, 4, 0.205) 99.99%, rgba(0, 0, 0, 0.5) 100%);
+  height: calc(100% - 4px);
 }
 
 @media screen and (max-width: 1420px) {
