--- a/src/css/logements-details.css
+++ b/src/css/logements-details.css
@@ -44,13 +44,7 @@ li {
     padding: 0 22px;
     line-height: 25px;
     width: auto;
-}
-
-ul {
-    display: flex;
-    gap: 10px;
-    padding-bottom: 24px;
-    flex-wrap: wrap;
+    color: #FFFFFF;
 }
 
 .logement-host {
@@ -103,23 +97,17 @@ ul {
         line-height: 26px;
     }
 
-    ul {
-        padding-bottom: 16px;
-    }
-
     .logement-collapses {
         flex-direction: column;
         gap: 20px;
         padding-bottom: 27px;
     }
 
-    .logement-tags {
-        display: flex
-    }
     .logement-rating svg {
         width: 13px;
         height: 13px;
     }
+
     .logement-rating {
         gap: 7px;
     }
